Fixed broken integration tests on linux